# rust-aya-process_hidden

./: .gitignore  Cargo.toml  README.md  hello.py
.vim/: coc-settings.json
hide-me/: Cargo.toml
hide-me-common/: Cargo.toml
hide-me-common/src/: lib.rs
hide-me-ebpf/: Cargo.toml
hide-me-ebpf/src/: main.rs  vmlinux.rs
hide-me-ebpf/src/vmlinux/: mod.rs  vmlinux.rs
hide-me/src/: main.rs
xtask/src/: build.rs  build_ebpf.rs  run.rs
